[package]
name = "paperd"
version = "1.1.0-snapshot"
authors = ["Kyle Wood <demonwav@gmail.com>"]
edition = "2018"
license = "LGPL-3.0-only"

[features]
console = ["ncurses"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
clap = "2.33.0"
crossbeam-channel = "0.4.0"
ncurses = {version = "5.99.0", optional = true }
nix = "0.16.1"
rand = "0.7.2"
regex = "1.3.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
shellexpand = "1.1.0"
signal-hook = "0.1.12"
sys-info = "0.5.8"
zip = "0.5.3"
paperd-lib = { path = "./paperd-lib/" }
