[package]
name = "paperd"
version = "1.1.0-snapshot"
authors = ["Kyle Wood <demonwav@gmail.com>"]
edition = "2018"
license = "LGPL-3.0-only"

[features]
console = ["ncurses"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
clap = "2.33.0"
crossbeam-channel = "0.4.2"
ncurses = {version = "5.99.0", optional = true }
nix = "0.17.0"
rand = "0.7.3"
regex = "1.3.6"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
shellexpand = "2.0.0"
signal-hook = "0.1.13"
sys-info = "0.6.0"
zip = "0.5.5"
paperd-lib = { path = "./paperd-lib/" }
