[package]
name = "paperd"
version = "1.1.0-snapshot"
authors = ["Kyle Wood <demonwav@gmail.com>"]
edition = "2018"
license = "LGPL-3.0-only"

[features]
console = ["ncurses"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.4.2"
ncurses = { version = "5.99.0", optional = true, features = ['wide'] }
nix = "0.17.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
shellexpand = "2.0.0"
signal-hook = "0.1.15"
sys-info = "0.6.1"
zip = "0.5.5"
paperd-lib = { path = "./paperd-lib/" }

[build-dependencies]
flate2 = "1.0.14"
