[package]
name = "paperd-jni"
version = "1.1.0-snapshot"
authors = ["Kyle Wood <demonwav@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
jni = "0.13.0"
nix = "0.14.1"
paperd-lib = { path = "../paperd-lib/" }
